// protoc -I=. -I=$GOPATH/src --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package dtalk.device;
option go_package = "github.com/txchat/dtalk/service/device";

message Empty {}

message Device {
  string uid          = 1;
  string connectId    = 2;
  string deviceUUid   = 3;
  int32 deviceType    = 4;
  string deviceName   = 5;
  string username     = 6;
  string deviceToken  = 7;
  bool isEnabled      = 8;
  uint64 addTime      = 9;
  string DTUid        = 10;
}

message EnableThreadPushDeviceRequest {
  string uid = 1;
  string connId = 2;
}

message GetUserAllDevicesRequest {
  string uid = 1;
}

message GetUserAllDevicesReply {
  repeated Device devices = 1;
}

service DeviceSrv {
  rpc AddDevice(Device) returns (Empty);
  rpc EnableThreadPushDevice(EnableThreadPushDeviceRequest) returns (Empty);
  rpc GetUserAllDevices(GetUserAllDevicesRequest) returns (GetUserAllDevicesReply);
}
